--- a/pfe-frontend/src/app/core/sidebar/sidebar.component.html
+++ b/pfe-frontend/src/app/core/sidebar/sidebar.component.html
@@ -179,7 +179,7 @@
              routerLinkActive="bg-blue-50 dark:bg-blue-900 text-blue-600 dark:text-blue-300"
              class="flex items-center p-2 rounded-lg hover:bg-gray-50 dark:hover:bg-gray-700 transition-colors">
             <i class="pi pi-book mr-3 text-gray-500 dark:text-gray-400"></i>
-            <span [class.hidden]="collapsed" class="text-gray-700 dark:text-gray-300">Discipline</span>
+            <span [class.hidden]="collapsed" class="text-gray-700 dark:text-gray-300">Disciplinary Actions</span>
           </a>
         </li>
       </ul>
